# cub3D

./: CMakeLists.txt  Makefile  cub3D  map.cub
images/: 2.xpm  m_706001269_w640_h640_kirpich-roben-keramicheskijaarhus-_1_.xpm  m_706001269_w640_h640_kirpich-roben-keramicheskijaarhus-_2_.xpm  path_to_the_east_texture.xpm  path_to_the_north_texture.xpm  path_to_the_south_texture.xpm  path_to_the_west_texture.xpm
includes/: cub3D.h  keys.h  keys_macos.h  libft.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putcharlen_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_putstrlen_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c
maps/: map.cub  map1.cub
srcs/: border.c  dbg.c  draw.c  draw_minimap.c  error.c  ident.c  init.c  key_handler.c  main.c  map.c  minimath.c  parse.c  player.c  ray.c  rendering.c  rgb.c  shadow.c  value.c  vectors.c  wall.c
